--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Bali</title>
+	<link rel="stylesheet" href="fonts.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header class="header">
