add style for header and nav

--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<title>Bali</title>
 	<link rel="stylesheet" href="fonts.css">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
+	<div class="wrap">
 	<header class="header">
-		<img class="header__logo" src="" alt="World of travel">
-	</header>
-	<nav class="menu">
+		<img class="header__logo" src="images/logo.png" alt="World of travel">
+    </header>
+	  <nav class="menu">
 		<a class="menu__link" href="">Start</a>
-		<a class="menu__link" href="">Services</a>
 		<a class="menu__link" href="">Services</a>
 		<a class="menu__link" href="">About</a>
 		<a class="menu__link" href="">Blog</a>
 		<a class="menu__link" href="">Contact us</a>
-	</nav>
-	<main class="main">
+	  </nav>
+    </div>
+    <main class="main">
 		<div class="main__content">
 			<h1 class="main__title">Bali</h1>
 			<h3 class="main__subtitle">Indonesia</h3>
