add style and burger

--- a/index.html
+++ b/index.html
@@ -9,29 +9,51 @@
 </head>
 <body class="body">
 	<div class="wrap">
-	<header class="header">
-		<img class="header__logo" src="images/logo.png" alt="World of travel">
-    </header>
-	  <nav class="menu">
-		<a class="menu__link" href="">Start</a>
-		<a class="menu__link" href="">Services</a>
-		<a class="menu__link" href="">About</a>
-		<a class="menu__link" href="">Blog</a>
-		<a class="menu__link" href="">Contact us</a>
-	  </nav>
-    </div>
-    <main class="main">
-		<div class="main__content">
-			<h1 class="main__title">Bali</h1>
-			<h3 class="main__subtitle">Indonesia</h3>
-			<p class="main__text">Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
-			<button class="main__button">Book travel</button>
-		</div>
-		<div class="main__wrap">
-			<img class="main__wrap-img" src="" alt="Tower">
-			<img class="main__wrap-img" src="" alt="Gates">
-			<img class="main__wrap-img" src="" alt="Field">
-		</div>
-	</main>
+		<header class="header">
+			<div class="header__logo">
+				<img src="images/logo.png" alt="World of travel">
+			</div>
+			<div class="header__menu">
+				<nav class="menu">
+					<a class="menu__link" href="">Start</a>
+					<a class="menu__link" href="">Services</a>
+					<a class="menu__link" href="">About</a>
+					<a class="menu__link" href="">Blog</a>
+					<a class="menu__link" href="">Contact us</a>
+				</nav>
+				<div class="burger">
+					<span class="burger__line_first"></span>
+					<span class="burger__line_second"></span>
+					<span class="burger__line_third"></span>
+					<span class="burger__line_fourth"></span>
+				</div>
+			</div>
+		</header>
+		<main class="main">
+			<div class="main__content">
+			  <div class="wrap-title">
+				<h1 class="main__title">Bali</h1>
+				<h3 class="main__subtitle">Indonesia</h3>
+			  </div>
+				<div class="main__text">
+					<p>Best Bali travel guide with great tips. Book hotels and villas, explore the best spas, events, Bali temples, scuba centers, and activities.</p>
+				</div>
+				<div class="wrap-button">
+					<button class="main__button">Book travel</button>
+				</div>
+			</div>
+			<div class="main__wrap">
+				<div class="main__wrap-one">
+					<img class="main__wrap-img" src="images/башня.png" alt="Tower">
+				</div>
+				<div class="main__wrap-two">
+					<img class="main__wrap-img" src="images/ворота.png" alt="Gates">
+				</div>
+				<div class="main__wrap-three">
+					<img class="main__wrap-img" src="images/поле.png" alt="Field">
+				</div>
+			</div>
+		</main>
+	</div>
 </body>
 </html>
