--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
 				<img src="images/logo.png" alt="World of travel">
 			</div>
 			<div class="header__menu">
+				<input type="checkbox" id="check-burger">
+			    <label class="burger" for="check-burger">
+			        <span></span>
+				</label>
 				<nav class="menu">
 					<a class="menu__link" href="">Start</a>
 					<a class="menu__link" href="">Services</a>
 					<a class="menu__link" href="">About</a>
 					<a class="menu__link" href="">Blog</a>
 					<a class="menu__link" href="">Contact us</a>
-				</nav>
-				<div class="burger">
-					<span class="burger__line_first"></span>
-					<span class="burger__line_second"></span>
-					<span class="burger__line_third"></span>
-					<span class="burger__line_fourth"></span>
-				</div>
+			    </nav>
 			</div>
 		</header>
 		<main class="main">
